--- a/RabbitMQ/2.md
+++ b/RabbitMQ/2.md
@@ -430,6 +430,6 @@ func main() {
 ---
 
 > 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。 
-> Author: MonsterMeng92
+> Author: MengBin92
 
 ---
