--- a/NSQ/概述/1、快速开始.md
+++ b/NSQ/概述/1、快速开始.md
@@ -37,11 +37,11 @@
 
 在上面的例子中，我们并没有告诉<font color="red">nsq_to_file</font> `test`topic是在哪创建的，它需要自己从<font color="red">nsqlookupd</font>中查询这些信息，并且尽管连接时间不同，但并没有消息丢失。  
 
-
-
 ---
 
 > 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。
-> Author: MengBin92
+> Author: mengbin92
+> Github: [mengbin92](https://mengbin92.github.io/)
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)
 
 ---
