--- a/Prometheus/PromQL/00基础.md
+++ b/Prometheus/PromQL/00基础.md
@@ -256,3 +256,11 @@ PromQL支持`#`开头的行注释：
 
 这与Prometheus的查询语言特别相关，在这种语言中，像`api_http_requests_total`这样的指标名称选择器可以扩展到数千个带有不同标签的时间序列。还要记住，在多个时间序列上聚合的表达式将在服务器上生成负载，即使输出只是少量的时间序列。这类似于在关系数据库中对一列的所有值求和，即使输出值只是一个数字，也是很慢的。
 
+---
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。
+> Author: mengbin92
+> Github: [mengbin92](https://mengbin92.github.io/)
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)
+
+---
