--- a/RabbitMQ/5.md
+++ b/RabbitMQ/5.md
@@ -252,6 +252,8 @@ go run emit_log_topic.go "kern.critical" "A critical kernel error"
 ---
 
 > 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。
-> Author: MengBin92
+> Author: mengbin92
+> Github: [mengbin92](https://mengbin92.github.io/)
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)
 
 ---
