--- a/fabric/browser/00.md
+++ b/fabric/browser/00.md
@@ -35,7 +35,7 @@ type Block struct {
 
 本文作为区块链浏览器系列的开篇，结构体中各字段的含义会在之后的文章中一一介绍，这里就不再过多介绍。接下来将以类图的形式来解析区块中包含的信息。
 
-<div class="mermaid">
+```mermaid
 classDiagram
 	class Block{
 		Header *BlockHeader
@@ -211,9 +211,7 @@ classDiagram
 	
 	Header --* ChannelHeader
 	Header --* SignatureHeader
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
-<script>mermaid.initialize({startOnLoad:true});</script>
+```
 
 ---
 
