--- a/fabric/browser/00.md
+++ b/fabric/browser/00.md
@@ -32,7 +32,7 @@ type Block struct {
 
 本文作为区块链浏览器系列的开篇，结构体中各字段的含义会在之后的文章中一一介绍，这里就不再过多介绍。接下来将以类图的形式来解析区块中包含的信息。
 
-```mermaid
+<div class="mermaid">
 classDiagram
 	class Block{
 		Header *BlockHeader
@@ -208,7 +208,7 @@ classDiagram
 	
 	Header --* ChannelHeader
 	Header --* SignatureHeader
-```
+</div>
 
 ---
 
