feat(新增Proto3相关文档):

--- a/_posts/2022-10-25-ol8安装.md
+++ b/_posts/2022-10-25-ol8安装.md
@@ -3,7 +3,7 @@ layout: post
 title: 使用boot.iso镜像安装OL8
 data: 2022-10-25
 tags: 其它
-mermaid: true
+mermaid: false
 ---  
 
 本文记录使用boot.iso镜像安装Oracle Linux 8。  
