--- a/_posts/2022-10-28-couchdb.md
+++ b/_posts/2022-10-28-couchdb.md
@@ -3,7 +3,7 @@ layout: post
 title: fabric couchdb使用
 data: 2022-10-27
 tags: fabric
-mermaid: true
+mermaid: false
 ---  
 
 Fabric支持两种类型的状态数据库：**LevelDB**和**CouchDB**。**LevelDB**默认嵌入在peer节点中，用于将合约数据存储为简单的key-value，仅支持键、键范围和组合键查询。**CouchDB**是可选的状态数据库，支持以JSON格式在账本中建模存储数据，且支持富查询。**CouchDB**同样支持在合约中部署索引，以便高效查询和对大型数据集的支持。
