--- a/_posts/2022-10-28-example.md
+++ b/_posts/2022-10-28-example.md
@@ -3,7 +3,7 @@ layout: post
 title: fabric网络升级示例
 data: 2022-10-27
 tags: fabric
-mermaid: true
+mermaid: false
 ---  
 
 以`fabric-samples v1.4.8`为例，将v1.4.8升级至v2.2.0。注意，所有节点以滚动的方式进行升级，这样可以保证即使单个节点数据备份过程出错也不会影响整个网络的运行。先升级orderer节点，再升级peer节点。
