--- a/_posts/2022-11-10-RabbitMQ00.md
+++ b/_posts/2022-11-10-RabbitMQ00.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ 准备
 data: 2022-11-10
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---  
 
 教程中所有程序的运行都依赖于**RabbitMQ服务**，方便起见，使用[Docker image](https://registry.hub.docker.com/_/rabbitmq/)，compose文件内容如下：  
