--- a/_posts/2022-11-10-ab命令使用.md
+++ b/_posts/2022-11-10-ab命令使用.md
@@ -3,7 +3,7 @@ layout: post
 title: ab命令使用
 data: 2022-11-10
 tags: 其它
-mermaid: true
+mermaid: false
 ---  
 
 网站性能压力测试是网站性能调优过程中必不可少的一个环节。只有服务器处于高压情况下，才能暴露出软件、硬件等各种设置的不当之处。  
