--- a/_posts/2022-11-10-plugin.md
+++ b/_posts/2022-11-10-plugin.md
@@ -3,7 +3,7 @@ layout: post
 title: Go plugin介绍
 data: 2022-11-10
 tags: go
-mermaid: true
+mermaid: false
 ---  
 
 以下内容来自[官方文档](https://pkg.go.dev/plugin)。
