--- a/_posts/2022-11-11-RabbitMQ02.md
+++ b/_posts/2022-11-11-RabbitMQ02.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ 工作队列
 data: 2022-11-11
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---  
 
 <div align="center"><img src="{{site.url}}/images/RabbitMQ/2/P_Q_2C.png"></div>  
