--- a/_posts/2022-11-11-RabbitMQ03.md
+++ b/_posts/2022-11-11-RabbitMQ03.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ 发布与订阅
 data: 2022-11-11
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---  
 
 在上一章节，我们创建了一个工作队列。工作队列的核心是将任务均匀地分发给每个工作者。本章节中我们将做一些完全不同的改变 -- 我们将一个消费分发给多个消费者。这种模式被称为“发布/订阅”。  
