--- a/_posts/2022-11-11-RabbitMQ04.md
+++ b/_posts/2022-11-11-RabbitMQ04.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ 路由
 data: 2022-11-11
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---  
 
 在上一节中，我们构建了一个简单日志系统，将日志信息广播给众多的接收者。  
