--- a/_posts/2022-11-11-RabbitMQ05.md
+++ b/_posts/2022-11-11-RabbitMQ05.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ topic
 data: 2022-11-11
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---  
 
 在上一章节中，我们升级了日志系统，使用了`direct`交换机，而不是只能虚拟广播的`fanout`交换机，并且实现了选择性接收消息的可能。  
