--- a/_posts/2022-11-11-RabbitMQ06.md
+++ b/_posts/2022-11-11-RabbitMQ06.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ RPC
 data: 2022-11-11
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---   
 
 在RabbitMQ 工作队列中，我们学习了如何通过*工作队列*在多个工作者之间分配耗时任务。  
