--- a/_posts/2022-11-11-RabbitMQ07.md
+++ b/_posts/2022-11-11-RabbitMQ07.md
@@ -3,7 +3,7 @@ layout: post
 title: RabbitMQ 发布者确认
 data: 2022-11-11
 tags: RabbitMQ
-mermaid: true
+mermaid: false
 ---  
 
 [发布者确认](https://www.rabbitmq.com/confirms.html#publisher-confirms)是实现可靠发布的RabbitMQ扩展。当通道启用了发布者确认，客户端发送的消息会被广播站异步确认，表明这些消息已在服务端处理过了。  
