--- a/_posts/2022-10-28-fabric网络升级.md
+++ b/_posts/2022-10-28-fabric网络升级.md
@@ -3,7 +3,7 @@ layout: post
 title: fabric网络升级
 data: 2022-10-27
 tags: fabric
-mermaid: true
+mermaid: false
 ---
 
 原文地址在[这里](https://hyperledger-fabric.readthedocs.io/en/release-2.2/upgrade.html)。  
