feat(新增toc.html，支持文件自动生成导航目录):

--- a/_posts/2022-11-12-Proto3-使用指南.md
+++ b/_posts/2022-11-12-Proto3-使用指南.md
@@ -3,7 +3,7 @@ layout: post
 title: Proto3 使用指南
 tags: proto3
 mermaid: false
-topic: true
+math: true
 ---  
 
 这篇指南讲述如何使用Protocol Buffers来结构化你的Protocol Buffer数据，包括`.proto`文件语法以及如何从`.proto`文件生成你的访问类型。本文主要涵盖了**proto3**的语法，**proto2**的语法参见[Proto2 Language Guide](https://developers.google.com/protocol-buffers/docs/proto)。  
@@ -118,7 +118,7 @@ message Foo {
 |    int32    | 使用可变长度编码。编码负数低效，如果字段可能有负数，使用sint32代替。 |  int32  |     int      |         int         |  int32  | Fixnum or Bignum(as required) |    int     |         integer          |    int     |
 |    int64    | 使用可变长度编码。编码负数低效，如果字段可能有负数，使用sint64代替。 |  int64  |     long     |  int/long$^{[3]}$   |  int64  |            Bignum             |    long    |  integer/string$^{[5]}$  |   int64    |
 |   uint32    |                          使用可变长度编码。                          | uint32  | int$^{[1]}$  |  int/long$^{[3]}$   | uint32  | Fixnum or Bignum(as required) |    uint    |         integer          |    int     |
-|   uint64    |                          使用可变长度编码。                          | uint64  | long$^{[1]}$ |  int/long$^{[3]}$   | uint64  |            Bignum             |   ulong    | integer/string$^{[5]}$}$ |   int64    |
+|   uint64    |                          使用可变长度编码。                          | uint64  | long$^{[1]}$ |  int/long$^{[3]}$   | uint64  |            Bignum             |   ulong    | integer/string$^{[5]}$ |   int64    |
 |   sint32    |       使用可变长度编码。有符号整数。编码负数比普通int32高效。        |  int32  |     int      |         int         |  int32  | Fixnum or Bignum(as required) |    int     |         integer          |    int     |
 |   sint64    |       使用可变长度编码。有符号整数。编码负数比普通int64高效。        |  int64  |     long     |  int/long$^{[3]}$   |  int64  |            Bignum             |    long    |  integer/string$^{[5]}$  |   int64    |
 |   fixed32   |              4字节。如果变量大于2$^{28}$比uint32高效。               | uint32  | int$^{[1]}$  |         int         |  int32  | Fixnum or Bignum(as required) |    int     |         integer          |    int     |
