--- a/_posts/2022-11-23-rz上传失败处理.md
+++ b/_posts/2022-11-23-rz上传失败处理.md
@@ -27,3 +27,12 @@ Linux下一切皆文件，可以通过删除文件node的方式来删除
 ls -i 
 find . -inum nodeid -exec rm -rf {} \;
 ```
+
+---
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: mengbin92  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
