--- a/_posts/2023-02-15-MySQL使用笔记.md
+++ b/_posts/2023-02-15-MySQL使用笔记.md
@@ -21,7 +21,22 @@ math: false
 
 > select * from test INFO OUTFILE '/var/lib/mysql/xxx.csv'
 
-<font color="red">使用INTO OUTFILE时需要设置secure_file_priv参数</font>，所以不推荐使用
+<font color="red">使用INTO OUTFILE时需要设置secure_file_priv参数，所以不推荐使用</font>
+
+## mysql导出数据库、表结构
+
+> mysqldump -uroot -p test_db > test_db.sql
+> mysqldump -uroot -p test_db test_table > test_table.sql
+
+只导出表结构，不导出数据:
+
+> mysqldump -uroot -p -d test_db > test_db.sql
+> mysqldump -uroot -p -d test_db test_table > test_table.sql
+
+## mysql导出表中的前n条数据
+
+> mysqldump -uroot -p test_db --where="true limit n" > test_db.sql
+> mysqldump -uroot -p test_db test_table --where="true limit n" > test_table.sql
 
 ---
 
