docs(新增mysql索引相关操作笔记):

--- a/_posts/2023-02-15-MySQL使用笔记.md
+++ b/_posts/2023-02-15-MySQL使用笔记.md
@@ -38,6 +38,76 @@ math: false
 > mysqldump -uroot -p test_db --where="true limit n" > test_db.sql
 > mysqldump -uroot -p test_db test_table --where="true limit n" > test_table.sql
 
+## mysql创建索引
+
+### 1. CREATE TABLE
+
+建表时指定索引：  
+
+```sql
+CREATE TABLE `user` (
+  `id` int NOT NULL AUTO_INCREMENT,
+  `username` varchar(30) NOT NULL,
+  `password` varchar(60) NOT NULL,
+  `created_at` timestamp NOT NULL,
+  `updated_at` timestamp NOT NULL,
+  `deleted_at` timestamp NULL DEFAULT NULL,
+  `phone` varchar(32) DEFAULT NULL,
+  `department` varchar(128) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  INDEX `idx_username` (`username`)
+);
+
+CREATE TABLE `user` (
+  `id` int NOT NULL AUTO_INCREMENT,
+  `username` varchar(30) NOT NULL,
+  `password` varchar(60) NOT NULL,
+  `created_at` timestamp NOT NULL,
+  `updated_at` timestamp NOT NULL,
+  `deleted_at` timestamp NULL DEFAULT NULL,
+  `phone` varchar(32) DEFAULT NULL,
+  `department` varchar(128) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE `idx_username` (`username`)
+);
+```
+
+### 2. CREATE
+
+```sql
+/* 创建普通索引 */
+CREATE INDEX idx_username ON user (username);
+
+/* 创建唯一索引 */
+CREATE UNIQUE INDEX idx_username ON user (username);
+```
+
+> 如果是CHAR，VARCHAR类型，length可以小于字段实际长度；如果是BLOB和TEXT类型，必须指定 length。
+
+### 3. ALTER TABLE
+
+ALTER TABLE可以用来创建普通索引、UNIQUE索引或PRIMARY KEY索引。  
+
+```sql
+/* 创建普通索引 */
+ALTER TABLE user ADD INDEX idx_username(username);  
+
+/* 创建唯一索引 */
+ALTER TABLE user ADD UNIQUE INDEX idx_username(username);  
+```  
+
+### 4. 删除索引
+
+```sql
+DROP INDEX idx_username on user;
+```  
+
+### 5. 显示索引信息  
+
+```sql
+SHOW INDEX FROM user\G;
+```
+
 ---
 
 > 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
