--- a/_posts/2023-04-12-tls证书注册.md
+++ b/_posts/2023-04-12-tls证书注册.md
@@ -169,3 +169,12 @@ renew --webroot -w /data/letsencrypt --quiet && docker kill --signal=HUP fronten
 ```
 
 2. crontab -e新增一条定时任务，每月1号00:00更新一次证书：`0 0 1 * * {{YOURPATH}}/renew.sh`
+
+---
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
