--- a/_posts/2023-05-11-wsl备份与还原.md
+++ b/_posts/2023-05-11-wsl备份与还原.md
@@ -27,7 +27,7 @@ wsl的导出可以使用命令`wsl --export`来操作，以Ubuntu为例，导出
 
 wsl的导入可以使用`wsl --import`来操作。以我们上面导出的wsl.tar为例：  
 
-> wsl --import wsl.tar d:\path\wsl
+> wsl --import Ubuntu d:\path\wsl wsl.tar
 
 ---
 
