--- a/_posts/2023-04-21-openai.md
+++ b/_posts/2023-04-21-openai.md
@@ -69,7 +69,7 @@ func main() {
 
 > 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
 > Author: [mengbin](mengbin1992@outlook.com)  
-> blog: [mengbin](mengbin.top)  
+> blog: [mengbin](https://www.mengbin.top/)  
 > Github: [mengbin92](https://mengbin92.github.io/)  
 > cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
 
