fix(新增PyTorch入门系列):

--- a/_posts/2023-05-20-PyTorch入门00.md
+++ b/_posts/2023-05-20-PyTorch入门00.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [PyTorch入门之60分钟入门闪击战]之入门
+title: PyTorch入门之60分钟入门闪击战之入门
 tags: [pytorch, 深度学习]
 mermaid: false
 math: false
