--- a/_posts/2023-05-20-PyTorch入门01.md
+++ b/_posts/2023-05-20-PyTorch入门01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [PyTorch入门之60分钟入门闪击战]之自动推倒
+title: PyTorch入门之60分钟入门闪击战之自动推倒
 tags: [pytorch, 深度学习]
 mermaid: false
 math: false
