--- a/_posts/2023-05-20-PyTorch入门03.md
+++ b/_posts/2023-05-20-PyTorch入门03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [PyTorch入门之60分钟入门闪击战]之训练分类器
+title: PyTorch入门之60分钟入门闪击战之训练分类器
 tags: [pytorch, 深度学习]
 mermaid: false
 math: false
