--- a/_posts/2023-05-20-PyTorch入门02.md
+++ b/_posts/2023-05-20-PyTorch入门02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [PyTorch入门之60分钟入门闪击战]之神经网络
+title: PyTorch入门之60分钟入门闪击战之神经网络
 tags: [pytorch, 深度学习]
 mermaid: false
 math: false
