--- a/_posts/2023-05-20-PyTorch入门05.md
+++ b/_posts/2023-05-20-PyTorch入门05.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [PyTorch入门]之从示例中学习PyTorch
+title: PyTorch入门之从示例中学习PyTorch
 tags: [pytorch, 深度学习]
 mermaid: false
 math: false
