--- a/_posts/2023-04-12-tls证书注册.md
+++ b/_posts/2023-04-12-tls证书注册.md
@@ -72,7 +72,9 @@ services:
 3. 启动web服务: `docker-compse up -d`
 4. 启动`certbot`申请证书：
 
-> docker run --rm -it -v ./certbot/etc/letsencrypt:/etc/letsencrypt -v ./certbot/var/log/letsencrpt:/var/log/letsencrypt -v ./frontend:/data/letsencrypt certbot/certbot:latest certonly --webroot --email your@eamil.com --agree-tos --no-eff-email --webroot-path=/data/letsencrypt -d example.com -d example.com
+```shell
+docker run --rm -it -v ./certbot/etc/letsencrypt:/etc/letsencrypt -v ./certbot/var/log/letsencrpt:/var/log/letsencrypt -v ./frontend:/data/letsencrypt certbot/certbot:latest certonly --webroot --email your@eamil.com --agree-tos --no-eff-email --webroot-path=/data/letsencrypt -d example.com -d www.example.com
+```
 
 运行结束后可以在`./certbot/etc/letsencrypt/live`目录下找到`example.com`文件夹，其中包含证书文件`fullchain.pem`和私钥文件`privkey.pem`。
 
