--- a/_posts/2023-07-25-gRPC教程.md
+++ b/_posts/2023-07-25-gRPC教程.md
@@ -474,4 +474,18 @@ Got message Second message at point(0, 2)
 Got message Fifth message at point(0, 2)
 Got message Third message at point(0, 3)
 Got message Sixth message at point(0, 3)
-```
+```  
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
