docs(新增wire使用手册及最佳实践):

--- a/_posts/2022-11-11-RabbitMQ06.md
+++ b/_posts/2022-11-11-RabbitMQ06.md
@@ -18,7 +18,7 @@ mermaid: false
 > * 确保哪个函数是本地调用，哪个是RPC调用
 > * 写好文档，明确各组件之间的关系
 > * 处理错误场景。当RPC长时间掉线，客户端应该如何处理？
-> 如果存疑，请避免使用RPC。如果可以，您应该使用异步管道 -- 而不是RPC的阻塞，结果被异步推送到下一个计算阶段。  
+> 如果存疑，请避免使用RPC。如果可以，你应该使用异步管道 -- 而不是RPC的阻塞，结果被异步推送到下一个计算阶段。  
 
 ---  
 
