--- a/_posts/2022-11-12-Proto3-API引用.md
+++ b/_posts/2022-11-12-Proto3-API引用.md
@@ -617,7 +617,7 @@ for (int i = 0; i < kSize; ++i) {
 }
 ```  
 
-（扩展标识符的确切实现是复杂的，涉及到模板的神奇使用——但是，您不需要担心扩展标识符是如何使用它们的。）  
+（扩展标识符的确切实现是复杂的，涉及到模板的神奇使用——但是，你不需要担心扩展标识符是如何使用它们的。）  
 
 扩展可以声明为其它类型的内嵌类型。例如，常见的模式如下：  
 
