--- a/_posts/2022-11-12-Proto3-cpp使用.md
+++ b/_posts/2022-11-12-Proto3-cpp使用.md
@@ -21,7 +21,7 @@ mermaid: false
 
 - 原始内存中数据结构可以发送/保存为二进制。这是一种随时间推移而变得脆弱的方法，因为接收/读写的代码必须编译成相同的内存布局，endianness等。另外，文件已原始格式积累数据和在网络中到处传输副本，因此扩展这种格式十分困难。
 - 你可以编写已临时的方法来讲数据元素编码到单个字符串中 --- 例如用“12:3:-23:67”来编码4个int。这是一种简单而灵活的方法，尽管它确实需要编写一次性的编码和解析代码，并且解析会增加少量的运行时成本。这对于编码非常简单的数据最有效。
-- 序列化为XML。这种方法非常有吸引力，因为XML(某种程度上)是人类可读的，而且有许多语言的绑定库。如果您希望与其他应用程序/项目共享数据，这可能是一个不错的选择。然而，XML是出了名的空间密集型，对它进行编码/解码会给应用程序带来巨大的性能损失。而且，在XML DOM树中导航要比在类中导航简单字段复杂得多。
+- 序列化为XML。这种方法非常有吸引力，因为XML(某种程度上)是人类可读的，而且有许多语言的绑定库。如果你希望与其他应用程序/项目共享数据，这可能是一个不错的选择。然而，XML是出了名的空间密集型，对它进行编码/解码会给应用程序带来巨大的性能损失。而且，在XML DOM树中导航要比在类中导航简单字段复杂得多。
 
 Protocol buffer是解决上述问题的一个灵活、高效、高度自动化的解决方案。使用Protocol buffer，你只需在`.proto`文件中描述你想要存储的数据结构。从文件中，protocol buffer编译器会创建一个类 --- 实现了可以自动编解码的、高效的二进制protocol buffer数据。生成的类为组成protocol buffer的字段提供getter和setter方法，并负责将protocol buffer作为一个整体进行读写的细节。重要的是，protocol buffer协议支持扩展格式，以便新的代码仍可读取旧格式的编码。  
 
@@ -64,7 +64,7 @@ message Person {
 
 接着，定义你的消息。消息只是一系列字段类型的集合体。很多标准的、简单的数据类型可以作为字段类型，包括`bool`、`int32`、`float`、`double`和`string`。你也可以使用其它消息类型作为字段类型来添加复杂结构到你的消息中 --- 就像上面例子中，`Person`消息包含`PhoneNumber`消息，同时`Person`消息包含在`AddressBook`消息中。你甚至可以定义消息类型嵌套在其它消息中 --- 就像上面`PhoneNumber`定义在`Person`中。你也可以定义`enum`类型，如果你想让你的字段只是用预定义列表中的一个值 --- 这里你想声明的电话类型可以是`MOBILE`、`HOME`或`WORK`其中之一。  
 
-“= 1”，“= 2”标记每个字段在二进制编码中的唯一的“tag”。序号1-15编码的字节数比较高的数字少一个，因此，作为一种优化，您可以决定对常用或重复的元素使用这些标记，而对不常用的可选元素使用标记16或更高。重复字段中的每个元素都需要重新编码标记号，因此重复字段是此优化的特别好的候选项。  
+“= 1”，“= 2”标记每个字段在二进制编码中的唯一的“tag”。序号1-15编码的字节数比较高的数字少一个，因此，作为一种优化，你可以决定对常用或重复的元素使用这些标记，而对不常用的可选元素使用标记16或更高。重复字段中的每个元素都需要重新编码标记号，因此重复字段是此优化的特别好的候选项。  
 
 每个字段都必须遵循下列规则之一：  
 
@@ -350,14 +350,14 @@ int main(int argc, char const *argv[])
 
 C++ Protocol Buffer库是高度优化过的。但是，恰当的用法还是可以提高效率的。下面的一些技巧可以让你进一步压榨库的性能：  
 
-- 尽可能重用消息对象。重用时，消息会保留它开辟的所有内存，即使被清理过。这样，如果你正在连续处理许多具有相同类型和相似结构的消息，那么每次最好重用相同的消息对象以减小内存分配的开销。但是，随着时间的推移，对象可能会变得非常庞大，特别是当您的消息在“形状”上发生变化，或者您偶尔构造一个比通常大得多的消息时。您应该通过调用`SpaceUsed`方法来监视消息对象的大小，并在它们变得太大时删除它们。
+- 尽可能重用消息对象。重用时，消息会保留它开辟的所有内存，即使被清理过。这样，如果你正在连续处理许多具有相同类型和相似结构的消息，那么每次最好重用相同的消息对象以减小内存分配的开销。但是，随着时间的推移，对象可能会变得非常庞大，特别是当你的消息在“形状”上发生变化，或者你偶尔构造一个比通常大得多的消息时。你应该通过调用`SpaceUsed`方法来监视消息对象的大小，并在它们变得太大时删除它们。
 - 在多线程调用时，针对大量小对象的创建，系统的内存分配可能优化的不够好。可以使用[Google`s tcmalloc](https://github.com/gperftools/gperftools)替代。  
 
 ## 高级用法  
 
 Protocol Buffer的用途不仅限于简单的访问器和序列化。一定要研究[C++ API Reference](https://developers.google.com/protocol-buffers/docs/reference/cpp/index.html)，看看还可以用它们做什么。  
 
-protocol 消息提供的一个最重要的功能是`反射`。你可以迭代消息的字段并操作它们的值，而无需针对任何特定的消息类型编写代码。使用反射的一个非常有用的方法是将协议消息与其他编码(如XML或JSON)进行转换。反射的一个更高级的用途可能是发现相同类型的两个消息之间的差异，或者开发一种“协议消息的正则表达式”，在这种表达式中可以编写与特定消息内容匹配的表达式。如果您发挥您的想象力，可能会将协议缓冲区应用到比您你初预期的范围更广的问题上!
+protocol 消息提供的一个最重要的功能是`反射`。你可以迭代消息的字段并操作它们的值，而无需针对任何特定的消息类型编写代码。使用反射的一个非常有用的方法是将协议消息与其他编码(如XML或JSON)进行转换。反射的一个更高级的用途可能是发现相同类型的两个消息之间的差异，或者开发一种“协议消息的正则表达式”，在这种表达式中可以编写与特定消息内容匹配的表达式。如果你发挥你的想象力，可能会将协议缓冲区应用到比你你初预期的范围更广的问题上!
 
 关于反射，详见[Message::Reflection interface](https://developers.google.com/protocol-buffers/docs/reference/cpp/google.protobuf.message.html#Message.Reflection)。
 
