--- a/_posts/2022-11-12-Proto3-使用指南.md
+++ b/_posts/2022-11-12-Proto3-使用指南.md
@@ -331,7 +331,7 @@ message Outer {                  // Level 0
 - 如果字节包含消息的编码版本，则嵌入的消息与`bytes`兼容。
 - `fixed32`与`sfixed32`、`fixed64`和`sfixed64`兼容。
 - 在传输格式中`enum`与`int32`、`uint32`、`int64`、`uint64`兼容（注意变量不兼容的部分将被截断）。然而需要留意的是在消息反序列化时，客户端代码会被区别对待：例如，尽管无法识别的proto3中的`enum`类型会被保存在消息中，但是在消息反序列化时，它是如何表示这取决于语言。int字段总会保留它的值。
-- 修改**new** `oneof`成员中的单个变量是安全且二进制兼容的。如果您确定没有代码一次设置多个字段，那么将多个字段移动到一个新的字段中可能是安全的。将任何字段移动到现有字段中都是不安全的
+- 修改**new** `oneof`成员中的单个变量是安全且二进制兼容的。如果你确定没有代码一次设置多个字段，那么将多个字段移动到一个新的字段中可能是安全的。将任何字段移动到现有字段中都是不安全的
 
 ## 未知字段  
 
