--- a/_posts/2023-06-27-优雅退出.md
+++ b/_posts/2023-06-27-优雅退出.md
@@ -19,7 +19,7 @@ math: false
 7. **SIGUSR1 (10)和SIGUSR2 (12)**：用户定义的信号，供应用程序自定义使用。  
 8. **SIGCHLD (17)**：子进程信号，父进程接收到此信号表示其子进程已终止或停止。
 
-这些只是Linux系统中一些常见的信号，还有其他信号可以用于特定目的。您可以使用`man`命令以及相关文档来获取更多有关信号的详细信息。  
+这些只是Linux系统中一些常见的信号，还有其他信号可以用于特定目的。你可以使用`man`命令以及相关文档来获取更多有关信号的详细信息。  
 
 所以，当需要终止进程时，SIGKILL (信号编号为9) 和 SIGTERM (信号编号为15) 是两个常见的信号，但这两个信号还是有很大不同的：    
 
