--- a/_posts/2023-08-02-solidity.md
+++ b/_posts/2023-08-02-solidity.md
@@ -86,6 +86,27 @@ contract SimpleContract {
 
 6. 在 `Deployed Contracts` 部分，您可以与智能合约进行交互。使用 `setMessage` 函数来更新消息。
 
+如果上面的网站打不开，也可以自己在本地通过docker起一个remix-ide服务，之后通过浏览器访问http://localhost:8080接口运行上面的示例合约：  
+
+```yaml
+version: '3.3'
+
+networks:
+  solidity:
+
+services:
+  remix-ide:
+    restart: always
+    image: mengbin92/remix:0.34.1
+    container_name: remix-ide
+    volumes:
+      - ./:/app
+    ports:
+      - 8080:80
+    networks:
+      - solidity
+```  
+
 ### 总结
 
 以上涵盖了 Solidity 的基础知识，包括数据类型、变量声明、函数和事件。还通过创建一个简单的智能合约示例来展示如何使用 Solidity 进行智能合约开发。要深入了解 Solidity，可以查阅官方文档和更高级的教程。  
