docs(add mysql索引):

--- a/_posts/2023-08-02-solidity.md
+++ b/_posts/2023-08-02-solidity.md
@@ -26,7 +26,7 @@ uint[]  // 整数数组
 
 #### 变量声明
 
-您可以在 Solidity 中声明变量，用于存储数据。变量可以是状态变量（存储在区块链上）或局部变量（仅在函数内部使用）。
+你可以在 Solidity 中声明变量，用于存储数据。变量可以是状态变量（存储在区块链上）或局部变量（仅在函数内部使用）。
 
 ```solidity
 uint256 public myNumber;  // 公开状态变量
@@ -84,7 +84,7 @@ contract SimpleContract {
 
 5. 部署合约：选择 `Deploy & Run Transactions` 部分，选择 `SimpleContract`，点击 `Deploy` 按钮。
 
-6. 在 `Deployed Contracts` 部分，您可以与智能合约进行交互。使用 `setMessage` 函数来更新消息。
+6. 在 `Deployed Contracts` 部分，你可以与智能合约进行交互。使用 `setMessage` 函数来更新消息。
 
 如果上面的网站打不开，也可以自己在本地通过docker起一个remix-ide服务，之后通过浏览器访问http://localhost:8080接口运行上面的示例合约：  
 
