--- a/_posts/2023-08-08-docker资源限制.md
+++ b/_posts/2023-08-08-docker资源限制.md
@@ -56,7 +56,7 @@ services:
 
 在这个例子中，我们限制了名为web的服务的CPU使用量为50%，内存使用量为512MB，CPU集为0到3，swap内存为1G，并且设置了内存预留为256M。
 
-同样，这些设置只在使用Docker Swarm模式时才会生效。如果你只是在单个主机上运行Docker容器，你需要使用`docker run`命令的相关参数来限制资源。
+这些设置只在使用Docker Swarm模式时才会生效。如果你只是在单个主机上运行Docker容器，你需要使用`docker run`命令的相关参数来限制资源。
 
 ---
 
