--- a/_posts/2023-08-25-grpcAuth.md
+++ b/_posts/2023-08-25-grpcAuth.md
@@ -84,96 +84,88 @@ func main() {
 
 2. **Token 认证：**
 
-在 Token 认证中，客户端在每次请求中附加一个令牌（Token），服务器在接收请求后验证该令牌。
+在 gRPC 中，`WithPerRPCCredentials` 接口用于为每个 RPC 调用设置自定义的认证凭据。这使得在每个单独的 RPC 调用中都可以使用不同的认证信息。这种方法适用于需要每个 RPC 调用使用不同凭据的情况，比如使用短期令牌或动态生成的凭据。
 
-服务器端：
+`WithPerRPCCredentials` 的签名如下：
 
 ```go
-package main
+func WithPerRPCCredentials(creds PerRPCCredentials) DialOption
+```
 
-import (
-	"your_package/pb"
-	"context"
-	"net"
+这里的 `PerRPCCredentials` 是一个接口，你需要实现这个接口来定义你自己的认证逻辑。接口定义如下：
 
-	"github.com/pkg/errors"
-	"google.golang.org/grpc"
-	"google.golang.org/grpc/metadata"
-)
-
-type HiService struct {
-	pb.UnimplementedSayHiServer
-}
-
-func verifyToken(token string) bool {
-	return true
-}
-
-func (s *HiService) Hi(ctx context.Context, req *pb.HelloRequest) (*pb.HelloResponse, error) {
-
-	md, ok := metadata.FromIncomingContext(ctx)
-	if !ok {
-		return nil, errors.New("token信息获取失败")
-	}
-	token := md.Get("Authorization")[0]
-	if !verifyToken(token) {
-		return nil, errors.New("token验证失败")
-	}
-
-	return &pb.HelloResponse{}, nil
-}
-
-func main() {
-	// 创建grpc服务示例
-	sv := grpc.NewServer()
-	// 注册我们的服务
-	pb.RegisterSayHiServer(sv, new(HiService))
-
-	// 绑定端口，提供服务
-	lis, err := net.Listen("tcp", ":50001")
-	if err != nil {
-		panic(err)
-	}
-	// 启动服务
-	sv.Serve(lis)
+```go
+type PerRPCCredentials interface {
+    GetRequestMetadata(ctx context.Context, uri ...string) (map[string]string, error)
+    RequireTransportSecurity() bool
 }
 ```
 
-客户端：
+- `GetRequestMetadata` 方法用于返回用于当前 RPC 调用的认证元数据，通常是一个键值对的映射。这些元数据将被添加到 gRPC 请求的标头中，用于认证。你可以在这里添加自己的认证信息。
+- `RequireTransportSecurity` 方法指示是否需要传输层安全，通常返回 `true`。
+
+以下是一个简单的示例，展示如何使用 `WithPerRPCCredentials` 接口为每个 RPC 调用设置自定义的 Token 认证凭据：
 
 ```go
 package main
 
 import (
 	"context"
+	"log"
 
 	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials"
 )
 
-type tokeAuth struct{}
+type TokenCredential struct {
+	Token string
+}
 
-func (t *tokeAuth) GetRequestMetadata(ctx context.Context, uri ...string) (map[string]string, error) {
-
-    // ...
-
+func (t TokenCredential) GetRequestMetadata(ctx context.Context, uri ...string) (map[string]string, error) {
 	return map[string]string{
-		"Authorization": "token",
+		"authorization": "Bearer " + t.Token,
 	}, nil
 }
 
-func (t *tokeAuth) RequireTransportSecurity() bool {
-	return false
+func (t TokenCredential) RequireTransportSecurity() bool {
+	return true
 }
 
 func main() {
-	conn,err := grpc.Dial("localhost:50001",grpc.WithPerRPCCredentials(&tokeAuth{}))
+	creds := TokenCredential{
+		Token: "your_access_token",
+	}
+
+	opts := []grpc.DialOption{
+		grpc.WithTransportCredentials(credentials.NewTLS(nil)),
+		grpc.WithPerRPCCredentials(creds),
+	}
+
+	conn, err := grpc.Dial("localhost:50051", opts...)
 	if err != nil {
-		panic(err)
+		log.Fatalf("Failed to dial: %v", err)
 	}
 	defer conn.Close()
 
+	// Use the connection for RPC calls
 	// ...
 }
 ```
 
-以上示例演示了如何在 gRPC 中实现 TLS/SSL 和 Token 认证。选择适合你项目需求的认证方式，并根据实际情况进行配置。
+在上面的示例中，`TokenCredential` 结构实现了 `PerRPCCredentials` 接口，用于设置每个 RPC 调用的认证元数据。通过使用 `WithPerRPCCredentials` 接口，我们将自定义的 Token 认证凭据应用于 gRPC 连接，并为每个 RPC 调用添加了认证标头。
+
+以上示例演示了如何在 gRPC 中实现 TLS/SSL 和 Token 认证。选择适合你项目需求的认证方式，并根据实际情况进行配置。  
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
