--- a/_posts/2023-08-26-grpcJWT.md
+++ b/_posts/2023-08-26-grpcJWT.md
@@ -231,3 +231,17 @@ reply:"hello Wang"
 ```
 
 以上示例是一个简单的代码示例，实际上还需要处理错误、安全性和其他细节。
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
