--- a/_posts/2023-08-28-gorm外键.md
+++ b/_posts/2023-08-28-gorm外键.md
@@ -66,4 +66,18 @@ func main() {
 
 在迁移数据库表时，GORM 会根据模型的关联关系自动创建外键。在查询用户时，使用 `Preload` 方法来预加载关联的订单信息。
 
-需要注意的是，不同的数据库可能对外键的处理方式有所不同。上述示例使用的是 SQLite 数据库，其他数据库可能需要稍微不同的配置。在实际应用中，你需要根据使用的数据库类型进行适当的配置。
+需要注意的是，不同的数据库可能对外键的处理方式有所不同。上述示例使用的是 SQLite 数据库，其他数据库可能需要稍微不同的配置。在实际应用中，你需要根据使用的数据库类型进行适当的配置。  
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
