--- a/_posts/2023-08-29-embed.md
+++ b/_posts/2023-08-29-embed.md
@@ -70,4 +70,18 @@ math: false
 - 嵌入文件的大小应适度，避免过大导致二进制文件过大。
 - `//go:embed` 指令只能用于全局变量，不能用于函数内的局部变量。同时，它只能嵌入在 Go 源代码文件同一目录或子目录下的文件或目录。
 
-总之，`go embed` 是一个强大的特性，使得在 Go 代码中嵌入文件变得更加方便和简单，特别是在需要将静态资源或配置文件包含在应用程序中时。
+总之，`go embed` 是一个强大的特性，使得在 Go 代码中嵌入文件变得更加方便和简单，特别是在需要将静态资源或配置文件包含在应用程序中时。  
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
