--- a/_posts/2023-08-29-https.md
+++ b/_posts/2023-08-29-https.md
@@ -91,4 +91,18 @@ sudo service nginx restart
 
 现在，当用户访问 `http://yourdomain.com` 时，Nginx 将自动将请求重定向到 `https://yourdomain.com`。
 
-这种设置可以确保用户始终通过安全的 HTTPS 连接访问您的网站，提供更好的安全性和数据保护。
+这种设置可以确保用户始终通过安全的 HTTPS 连接访问您的网站，提供更好的安全性和数据保护。  
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
