--- a/_posts/2023-08-30-pprof.md
+++ b/_posts/2023-08-30-pprof.md
@@ -31,9 +31,9 @@ math: false
 `github.com/gin-contrib/pprof` 和标准库里的 `pprof` 都是用于性能分析和调试的工具，但它们在使用方式和功能上存在一些区别。下面是它们的对比：
 
 **`github.com/gin-contrib/pprof`：**
-1. **依赖关系：** `gin-contrib/pprof` 是 Gin 框架的一个中间件，它需要在 Gin 应用中使用。需要使用 `gin.Engine` 进行集成。
+1. **依赖关系：** `github.com/gin-contrib/pprof` 是 Gin 框架的一个中间件，它需要在 Gin 应用中使用。需要使用 `gin.Engine` 进行集成。
 2. **使用方式：** 在路由中注册中间件后，可以通过访问特定的路由来访问 pprof 的不同调试页面，如 `/debug/pprof`。
-3. **功能扩展：** `gin-contrib/pprof` 通过中间件将标准库的 `pprof` 功能集成到 Gin 框架中，提供了 Web UI，可以方便地查看 CPU、内存等性能指标，并支持访问堆栈跟踪、内存分配等信息。
+3. **功能扩展：** `github.com/gin-contrib/pprof` 通过中间件将标准库的 `pprof` 功能集成到 Gin 框架中，提供了 Web UI，可以方便地查看 CPU、内存等性能指标，并支持访问堆栈跟踪、内存分配等信息。
 4. **适用场景：** 适用于已经使用 Gin 框架开发的项目，希望通过 Web UI 方便地查看性能指标。
 
 **标准库里的 `pprof`：**
