--- a/_posts/2023-02-15-MySQL使用笔记.md
+++ b/_posts/2023-02-15-MySQL使用笔记.md
@@ -13,7 +13,7 @@ math: false
 除了在mysql命令行下导出查询结果，还可以在终端直接导出查询结果到文件中：
 
 > mysql -uroot -p -e "select * from test" > xxx.csv  
-> 如果导出结果中涉及到中文，可以使用**--default-character-set=utf8mb4**指定查询结果使用utf8mb4字符集  
+> 如果导出结果中涉及到中文，可以使用**\--default-character-set=utf8mb4**指定查询结果使用utf8mb4字符集  
 
 ### INTO OUTFILE  
 
@@ -35,8 +35,8 @@ math: false
 
 ## mysql导出表中的前n条数据
 
-> mysqldump -uroot -p test_db --where="true limit n" > test_db.sql  
-> mysqldump -uroot -p test_db test_table --where="true limit n" > test_table.sql  
+> mysqldump -uroot -p test_db \--where="true limit n" > test_db.sql  
+> mysqldump -uroot -p test_db test_table \--where="true limit n" > test_table.sql  
 
 ## mysql创建索引
 
@@ -110,9 +110,15 @@ SHOW INDEX FROM user\G;
 
 ---
 
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
 > 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
-> Author: mengbin92  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
 > Github: [mengbin92](https://mengbin92.github.io/)  
 > cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
 
 ---
+
