--- a/_posts/2023-09-15-表分区.md
+++ b/_posts/2023-09-15-表分区.md
@@ -25,7 +25,7 @@ CREATE TABLE orders (
     customer_id INT,
     total_amount DECIMAL(10, 2)
 )
-PARTITION BY RANGE (YEAR(order_date)) (
+PARTITION BY RANGE (YEAR(order_id, order_date)) (
     PARTITION p0 VALUES LESS THAN (1990),
     PARTITION p1 VALUES LESS THAN (2000),
     PARTITION p2 VALUES LESS THAN (2010),
