--- a/_posts/2023-09-23-yaml.md
+++ b/_posts/2023-09-23-yaml.md
@@ -184,3 +184,16 @@ func main() {
 
 `gopkg.in/yaml.v3` 是一个功能强大的 Go 库，用于解析和生成 YAML 数据。它支持复杂的 YAML 结构，可以轻松地读取和写入配置文件。通过使用这个库，你可以方便地在你的 Go 项目中处理 YAML 格式的数据，无论是从文件中读取配置还是将配置写入文件，都变得非常简单。
 
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
