--- a/_posts/2023-10-09-makefile.md
+++ b/_posts/2023-10-09-makefile.md
@@ -198,3 +198,17 @@ VAR2 = value
 ```
 
 在这个示例中，`VAR1` 的值将是 `value`，因为 Make 会递归地展开变量。
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+> Author: [mengbin](mengbin1992@outlook.com)  
+> blog: [mengbin](https://mengbin.top)  
+> Github: [mengbin92](https://mengbin92.github.io/)  
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+---
