fix(update树的基本概念):

--- a/_posts/2023-11-05-tree.md
+++ b/_posts/2023-11-05-tree.md
@@ -12,18 +12,18 @@ math: false
 
 ### 树的主要概念和属性
 
-1. **节点（Node）：** 树的基本单位，包含数据元素和指向其他节点的引用。
-2. **根节点（Root Node）：** 树的顶部节点，是整棵树的起点。
-3. **分支节点（Internal Node）：** 非叶子节点，至少有一个子节点。
-4. **叶子节点（Leaf Node）：** 没有子节点的节点。
-5. **父节点（Parent Node）：** 有子节点的节点。
-6. **子节点（Child Node）：** 直接连接到父节点的节点。
-7. **层级（Level）：** 树中每一层的节点集合，根节点为第一层。
-8. **高度（Height）：** 树的最大层级数，也称为深度。
-9. **子树（Subtree）：** 树中的任何节点及其所有后代节点形成的树。
-10. **树的大小（Size）：** 树中的节点总数。
-11. **树的度（Degree）：** 树中一个节点的子节点数。
-12. **森林（Forest）：** 由多棵树组成的集合。
+1. **节点（Node）：** 节点是树的基本单元，它包含数据元素和一个或多个指向其他节点的引用。树中的每个元素都表示为一个节点。
+2. **根节点（Root Node）：** 树的顶部节点被称为根节点。它是整棵树的起点，所有其他节点都从根节点开始。
+3. **分支节点（Internal Node）：** 除了叶子节点以外的节点都称为分支节点。分支节点至少有一个子节点。
+4. **叶子节点（Leaf Node）：** 叶子节点是树中没有子节点的节点，它们位于树的末梢。
+5. **父节点（Parent Node）：** 有子节点的节点被称为父节点。父节点可以有多个子节点。
+6. **子节点（Child Node）：** 子节点是直接连接到父节点的节点。一个父节点可以有多个子节点。
+7. **层级（Level）：** 树中的每一层是一个层级。根节点位于第一层，子节点的层级依次递增。
+8. **高度（Height）：** 树的高度是从根节点到最深层叶子节点的层级数。它表示树的深度。
+9. **子树（Subtree）：** 子树是树中的任何节点及其所有后代节点形成的树。子树可以是原树的一部分。
+10. **树的大小（Size）：** 树的大小是指树中的节点总数，包括根节点、分支节点和叶子节点。
+11. **树的度（Degree）：** 树的度是树中一个节点的子节点数。节点的度可以不同，但对于一棵树，通常有一个固定的度。
+12. **森林（Forest）：** 森林是由多棵树组成的集合。如果一个集合包含多棵树而没有根节点，则它被称为森林。
 
 ### 常见类型的树
 
