fix(Map中的key为什么是无序的):

--- a/_posts/2024-01-27-go_map_key.md
+++ b/_posts/2024-01-27-go_map_key.md
@@ -6,7 +6,7 @@ mermaid: false
 math: false
 ---  
 
-## 1. 为什么是无序的？  
+## 为什么是无序的？  
 
 首先，我们先看下go的`runtime`中是如何实现`map`的迭代，以**go 1.21.6**为例，以下是关键部分，完整的源码位于**src/runtime/map.go**中：  
 
