--- a/_posts/2024-02-02-go_keys.md
+++ b/_posts/2024-02-02-go_keys.md
@@ -6,7 +6,7 @@ mermaid: false
 math: false
 --- 
 
-以下是 Go 语言中的一些关键字，以 Markdown 表格的形式详细介绍它们：
+以下是 Go 语言中的一些关键字：
 
 | 关键字       | 描述                                                         |
 | :------------ | :------------------------------------------------------------ |
