--- a/_posts/2024-05-01-wallets.md
+++ b/_posts/2024-05-01-wallets.md
@@ -90,3 +90,23 @@ import ethwalletfrom 'ethereumjs-wallet';
 const privateKeyString2 = await ethwallet.fromV3(v3String,'111111')
 console.log(JSON.stringify(privateKeyString2));
 ```
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+
+> Author: [mengbin](mengbin1992@outlook.com)  
+
+> blog: [mengbin](https://mengbin.top)  
+
+> Github: [mengbin92](https://mengbin92.github.io/)  
+
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+> 腾讯云开发者社区：[孟斯特](https://cloud.tencent.com/developer/user/6649301)  
+
+---
