--- a/_posts/2024-05-18-solidity01.md
+++ b/_posts/2024-05-18-solidity01.md
@@ -49,7 +49,7 @@ contract Counter{
 合约说明：  
 
 1. `// SPDX-License-Identifier: MIT`: 这不是Solidity的关键字，而是文件顶部的版权许可声明。它指定了使用哪个开源许可。在这个例子中，使用的是MIT许可。
-2. `pragma solidity ^0.8.24;`: `pragma`用来声明Solidity编译器的版本号。`^`表示以太坊支持的最新版本。在这个例子中，编译器版本设定的是0.8.24。
+2. `pragma solidity ^0.8.24;`: `pragma`用来声明Solidity编译器的版本号。`^`表示适用指定发布版本及补丁版本。在这个例子中，编译器版本设定的是0.8.24。
 3.  `contract`: 这是用来声明智能合约的关键字。所有在括号 `{}`中的代码组成了合约的主题。在这个例子中，合约的名字是`Counter`。
 4.  `int256`: 这是Solidity的一个数据类型，代表256位整数。在这个例子中，`count`被声明为`int256`类型。
 5. `public`: 这是一个可见性修饰符。在这个例子中，它表明`count`变量和下面的函数可以在合约外部被访问。
