--- a/_posts/2024-05-24-solidity16.md
+++ b/_posts/2024-05-24-solidity16.md
@@ -154,6 +154,22 @@ contract TestFallbackInputOutput {
 }
 ```
 
+## receive or fallback
+
+既然`receive`和`fallback`都可以接收ETH，那什么时候调用`receive`？什么时候调用`fallback`？  
+
+在Solidity中，当你发送Ether时，会根据`msg.data`是否为空以及`receive()`函数是否存在来决定是调用`receive()`函数还是`fallback()`函数。
+
+以下是详细的判断流程：
+
+1. 首先，检查`msg.data`是否为空。
+2. 如果`msg.data`为空，那么就会检查`receive()`函数是否存在。
+   - 如果`receive()`函数存在，那么就会调用`receive()`函数。
+   - 如果`receive()`函数不存在，那么就会调用`fallback()`函数。
+3. 如果`msg.data`不为空，那么就会直接调用`fallback()`函数。
+
+这种设计是为了在不同的情况下提供更大的灵活性。例如，你可能希望在没有任何数据的情况下（即`msg.data`为空）执行一种操作（通过`receive()`函数），而在有数据的情况下执行另一种操作（通过`fallback()`函数）。
+
 ---
 
 <div align="center">
