--- a/_posts/2024-07-29-solidity28.md
+++ b/_posts/2024-07-29-solidity28.md
@@ -169,4 +169,24 @@ contract MyContractProxy {
 - **安全性：** 更新前的合约状态和余额不会丢失或重置。
 - **成本：** 代理模式可以降低升级过程的成本，避免重新部署合约带来的高昂费用。
 
-需要注意的是，代理模式需要谨慎设计，确保新版本的合约与旧版本保持兼容性，以及更新过程的安全性和透明性。
+需要注意的是，代理模式需要谨慎设计，确保新版本的合约与旧版本保持兼容性，以及更新过程的安全性和透明性。  
+
+---
+
+<div align="center">
+  <img src="../img/qrcode_wechat.jpg" alt="孟斯特">
+</div>
+
+> 声明：本作品采用[署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)进行许可，使用时请注明出处。  
+
+> Author: [mengbin](mengbin1992@outlook.com)  
+
+> blog: [mengbin](https://mengbin.top)  
+
+> Github: [mengbin92](https://mengbin92.github.io/)  
+
+> cnblogs: [恋水无意](https://www.cnblogs.com/lianshuiwuyi/)  
+
+> 腾讯云开发者社区：[孟斯特](https://cloud.tencent.com/developer/user/6649301)  
+
+---
