--- a/_posts/2024-08-16-rand.md
+++ b/_posts/2024-08-16-rand.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: `math/rand`和`crypto/rand`对比
+title: Go 语言中 `math/rand` 和 `crypto/rand`对比
 tags: go 
 mermaid: false
 math: false
